--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Ignore files in /tmp directory
-/tmp/**
+#/tmp/**
 
 # Ignore dependencies in /vendor directory
-/vendor/**
+#/vendor/**
 
 # Ignore Logs
-*.log
+#*.log
 
 # Ignore the build directory
 /dist
