--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.2"
+        "phpmailer/phpmailer": "^6.2",
+        "hostbrook/videna-fwk": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "Videna\\": "Videna/",
             "App\\": "App/"
         }
     }
