--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,18 @@
 {
+    "name": "hostbrook/videna",
+    "description": "Videna PHP Framework",
+    "type": "project",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "HostBrook",
+            "email": "support@hostbrook.com",
+            "homepage": "https://hostbrook.com"
+        }
+    ],
+    "minimum-stability": "stable",
     "require": {
+        "php": ">=5.6",
         "phpmailer/phpmailer": "^6.2",
         "hostbrook/videna-fwk": "^1.0"
     },
