--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     },
     "require": {
         "php": ">=5.6",
-        "phpmailer/phpmailer": "^6.2",
-        "hostbrook/videna-fwk": "^1.0"
+        "hostbrook/videna-fwk": "^1.0",
+        "phpmailer/phpmailer": "^6.2"
     },
     "autoload": {
         "psr-4": {
