--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ logs/*
 !logs/.gitkeep
 
 # Ignore file containing environment variables 
-App/configs/env.php
+App/configs/.env
+storage/*.key
 
 # Ignore IDE specific files
 .vscode/git
