--- a/App/configs/.env.localhost
+++ b/App/configs/.env.localhost
@@ -1,11 +1,11 @@
 # Application settings
-APP_DEBUG=true
-APP_URL='https://videna'
+APP_DEBUG=1
+APP_URL='videna'
 
 # Database setting
 DB_NAME='videna'
 DB_USER='root'
-DB_PASSWORD='root'
+DB_PASSWORD=
 DB_HOST='localhost'
 
 # PHPMailer server settings
@@ -14,29 +14,34 @@ DB_HOST='localhost'
 # 1 = client messages
 # 2 = client and server messages
 MAIL_SMTP_DEBUG=2
-MAIL_HOST="sandbox.smtp.mailtrap.io"
+
+MAIL_CONFIG='mail.config.php'
+MAIL_FROM_ADDRESS='support@hostbrook.com'
+MAIL_FROM_NAME='Videna'
+
+# MailTrap
+MAIL_HOST='sandbox.smtp.mailtrap.io'
 MAIL_PORT=2525
-MAIL_USERNAME='{username}'
-MAIL_PASSWORD='{secret_password}'
+MAIL_USERNAME='XXX'
+MAIL_PASSWORD='XXX'
 MAIL_ENCRYPTION='tls'
-MAIL_SMTP_AUTH=true
-MAIL_FROM_ADDRESS='email@domain.com'
-MAIL_FROM_NAME='videna'
+MAIL_SMTP_AUTH=1
+
 
 # DKIM settings
 # Keys are generated here: https://tools.socketlabs.com/dkim/generator
 # Check DKIM here: https://dmarcly.com/tools/dkim-record-checker
 # Check mail here: https://www.mail-tester.com/
-DKIM_SELECTOR='selector123'
+DKIM_SELECTOR=123456
 DKIM_DOMAIN='domain.com'
-DKIM_IDENTITY='email@domain.com'
-DKIM_PRIVATE_KEY="/storage/dkim/private_key.txt"
+DKIM_IDENTITY='support@hostbrook.com'
+DKIM_PRIVATE_KEY='storage/dkim/private.key'
 
 # Login via Google
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
+GOOGLE_CLIENT_ID='XXX.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='GOCSPX-XXX'
+GOOGLE_REDIRECT_URI='https://videna.hostbrook.com'
 
 # Login via Facebook
-FACEBOOK_APP_ID=
-FACEBOOK_APP_VERSION=
+FACEBOOK_APP_ID='123xxx'
+FACEBOOK_APP_VERSION='v15.0'
